--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     
 </head>
 <body class='bg-cyan-900 pt-6'>
-    <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg flex items-center space-x-4">
+    <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg items-center">
         <div class="flex flex-col items-center">
             <div class="text-xl font-medium text-black"> &#128640 Magic Spell</div>
-            <button id="startBtn" class="text-slate-100 bg-cyan-900">Say Magic Missle to fire a missle!</button>
+            <button id="startBtn" class="text-slate-100 bg-cyan-900">Say "Abracadara" to fire a missle!</button>
         </div>
         
     </div>
